@@ -1,4 +1,5 @@
 2003-06-30  Tim Waugh  <twaugh@redhat.com>
+	* src/plugins/Makefile.am: Ship FanChart.py.
 	* src/plugins/Ancestors.py (generation): Report on the correct
 	number of generations (was out by one).  Fixed text style for
 	'(no photo)'.
